# hotels_hw

./: .dockerignore  .env-test  .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  celerybeat-schedule  docker-compose-ci.yml  docker-compose-db.yml  docker-compose.yml  hotels.py  main.py  pyproject.toml  pytest.ini  requirements.txt
schemas/: hotels.py
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py  status.py  users.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2025_03_18_1458-2eeede10a2f0_add_rooms.py  2025_03_18_1504-37402ca20d54_del_hotels_name.py  2025_03_20_0927-44ce3fa491fc_add_users.py  2025_03_20_0930-f8ff5acfd59a_add_users_v1.py  2025_03_20_0956-5d3500f77166_add_users_v2.py  2025_03_20_1207-65bb51194962_add_users_v3.py  2025_03_20_1220-52f5c2a7db59_add_users_v4.py  2025_03_24_0941-b2a2668d9084_hotels_rooms_del_cascade.py  2025_03_24_1107-259d21a68832_add_bookings.py  (+8 more)
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  exceptions.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  base.py  bookings.py  exceptions.py  facilities.py  hotels.py  rooms.py
src/tasks/: celery_app.py
src/utils/: cache_dec.py  db_manager.py
tests/: conftest.py
tests/integration_tests/: test_auth.py
tests/unit_tests/: test_auth.py
(+12 files in other folders)
