[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "black>=25.1.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.20.0",
]
